--- a/css/themes/light.css
+++ b/css/themes/light.css
@@ -2,6 +2,10 @@
   color: black;
 }
 
+.schooltext:hover, .schooltext.show {
+  color: white;
+}
+
 .countdown-container {
   background-color: rgba(242, 242, 242, 0.5);
   box-shadow: 0 0 33px -15px rgba(0,0,0,0.75);
